--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -1,6 +1,8 @@
 .part1 {
     background-image:url(../images/assets/backgrounds/hero.jpg);
-    padding-bottom: 500px;
+    height: 800px;
+    padding-bottom: 0px;
+
       }
 
 .part1 p {
@@ -13,10 +15,13 @@
   }
 
 #gender{
-    margin-top: 30px; 
+    padding-top: 0;
+    border-top: 0;
 }
 
 #panel{
+    padding-top: -0;
+    margin-top: -0;
 }
 
 .image {
@@ -24,7 +29,7 @@
   }
 .section4 {
       background-image:url(../images/assets/backgrounds/about.jpg);
-      padding: 70px;
+      height: 400px;
   }
 .about{
       border-style: solid;
