--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -58,8 +58,13 @@
   }
 
 #footer{
-    height: 300px;
+    height: 400px;
 }
 .section3{
       background-color: rgba(195,131,76);
+  }
+
+.white-text{
+      font-size: 20px;
+      padding-top: 50px;
   }
