--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -5,19 +5,23 @@
 
       }
 
+.brand-logo{
+    font-size: 50px;
+} 
+
 .part1 p {
      color: white;
+     text-align: center;
+     padding-left: 150px;
+     padding-top: 50px;
       }
 
 .part1 h1 {
     color: white;
-    text-align: center;
+    padding-top: 150px;
+    padding-left: 300px;
   }
 
-#gender{
-    padding-top: 0;
-    border-top: 0;
-}
 
 #panel{
     padding-top: -0;
