--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -28,6 +28,10 @@
     margin-top: -0;
 }
 
+#panel1{
+    padding-bottom: 50px;
+}
+
 .image {
       background-image: url(../images/assets/products/tshirt.png);
   }
@@ -37,12 +41,17 @@
   }
 .about{
     padding-top: 80px;
-      border-style: solid;
-        border-width: 1px;
-        color: white;
-        font-size: 25px;
+    font-size: 25px;
   }
 
+.boxed{
+    border: 1px solid rgb(97, 76, 7);
+    padding-left: 20px;
+}  
+
+.about p{
+color: white;
+}
 #nav{
     height: 100px;
     padding-bottom: -0;
