--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -46,7 +46,6 @@
 
 .boxed{
     border: 1px solid rgb(97, 76, 7);
-    padding-left: 20px;
 }  
 
 .about p{
@@ -65,6 +64,13 @@ color: white;
     font-size: 20px;
     padding-top: 25px;
 }
+
+#nav{
+    color: #FFFFFF;
+    position: relative;
+    height: 100px;
+}
+
 .section6{
       text-align: center;
       padding: 50px;
@@ -72,18 +78,93 @@ color: white;
 
 #footer{
     height: 400px;
+    
 }
+
+.nospace{
+    font-size: 0;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+
 .section3{
       background-color: rgba(195,131,76);
-  }
+}
 
-.white-text p{
-      font-size: 20px;
+.white-text1{
+    color: #FFFFFF;
+    float: bottom; 
+}
+
+#ft{
+    padding-top: 20px;
+    margin-top: 20px;
+    padding-left: 150px;
+}
+
+#ft p{
+    font-size: 25px;
+    padding-left: 50px;
+    padding-bottom: 0;
+    border-bottom: 0;
+    margin-bottom: 0;
+}
+
+#ft img{
+    padding-inline-end: 20px;
+}
+
+#img2  {
+    padding-left: 20px;
+}
+
+#img3{
+    padding-left: 20px;
+    padding-right: 10px;
+}
+
+#img5{
+    padding-left: 20px;
+    padding-top: 30px;
+}
+
+#img4{
+    padding-top: 30px;
+}
+
+#img6{
+    padding-left: 20px;
+    padding-top: 30px;
+}
+
+#img7{
+    padding-left: 20px;
+    padding-top: 30px;
+}
+
+.white-text2 p{
+      font-size: 15px;
       margin-top: 150px;
       font-style: oblique;
+      color: #FFFFFF;
+      padding-left: 80px;
   }
 
-.white-text h4{
+.white-text2 h4{
     font-size: 30px;
+    color: #FFFFFF;
+    font-size: 25px;
+    padding-left: 80px;
+}
+
+.white-text h5{
+    font-size: 30px;
+    padding-top: 100px;
+}
+
+.white-text P{
+    font-size: 20px;
+    font-style: inherit;
 
 }
