--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -160,11 +160,18 @@ color: white;
 
 .white-text h5{
     font-size: 30px;
+    line-height: 0;
+    padding-bottom: 0;
+    padding-left: 20px;
+}
+#YM{
     padding-top: 100px;
+    padding-left: 50px;
 }
 
 .white-text P{
-    font-size: 20px;
-    font-style: inherit;
-
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height:35px;
+    padding-top: 0;
 }
