--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -77,7 +77,7 @@ color: white;
   }
 
 #footer{
-    height: 400px;
+    height: 350px;
     
 }
 
@@ -98,9 +98,9 @@ color: white;
 }
 
 #ft{
-    padding-top: 20px;
-    margin-top: 20px;
-    padding-left: 150px;
+    padding-top: 25px;
+    margin-top: 25px;
+    padding-left: 100px;
 }
 
 #ft p{
@@ -139,8 +139,15 @@ color: white;
 }
 
 #img7{
-    padding-left: 20px;
+    padding-left: 30px;
     padding-top: 30px;
+}
+
+.cp{
+    color: #FFFFFF;
+    font-size: 5px;
+    padding-top: 60px;
+    font-style: oblique;
 }
 
 .white-text2 p{
