--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -57,12 +57,14 @@ color: white;
 }
 
 #nav img{
-    padding-right: 400px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 #nav p{
     font-size: 20px;
     padding-top: 25px;
+    padding-right: 300px;
 }
 
 #nav{
