reduced image size for section 3

--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -50,8 +50,21 @@
 }  
 
 .about p{
-color: white;
+    color: white;
 }
+
+#shirt{
+    width: 35%;
+}
+
+#pants{
+    width: 30%;
+}
+
+#bag{
+    width: 40%;
+}
+
 #nav{
     height: 100px;
     padding-bottom: -0;
