--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -54,12 +54,60 @@
 }
 
 #shirt{
-    width: 35%;
+    width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 50px;
+}
+
+#box{
+    width: 310px;
+}
+
+#shadow{
+    height: 150px;
+}
+
+#shadow span{
+    float: left;
+    padding-top: 90px;
+    color: brown;
+}
+
+#shadow p{
+    float: right;
+    padding-top: 100px;
+    font-size: 20px;
+    font-style: unset;
+    color: black;
 }
 
 #pants{
     width: 30%;
 }
+
+#card{
+    height: 150px;
+}
+
+#card span{
+    float: left;
+    padding-top: 90px;
+    color: brown;
+}
+
+#card p{
+    float: right;
+    padding-top: 100px;
+    font-size: 20px;
+    font-style: unset;
+    color: black;
+}
+
+
+
+
 
 #bag{
     width: 40%;
