--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -85,27 +85,33 @@
 
 #pants{
     width: 30%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 50px;
 }
 
 #card{
-    height: 150px;
+    height:135px;
 }
 
 #card span{
     float: left;
-    padding-top: 90px;
+    padding-top: 20px;
     color: brown;
 }
 
 #card p{
     float: right;
-    padding-top: 100px;
+    padding-top: 30px;
     font-size: 20px;
     font-style: unset;
     color: black;
 }
 
-
+#box1{
+    width: 310px;
+}
 
 
 
