--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -145,10 +145,68 @@
 }
 
 .wrap{
-    float: right;
-    padding-right: 50px;
+    padding-left: 1100px;
     font-size: 23px;
+    border-bottom: 0.5px solid;
 }
+
+
+#jacket{
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 50px;
+}
+
+#jtcontent{
+    height:135px;
+}
+
+#jtcontent span{
+    float: left;
+    padding-top: 20px;
+    color: brown;
+}
+
+#jtcontent p{
+    float: right;
+    padding-top: 30px;
+    font-size: 20px;
+    font-style: unset;
+    color: black;
+}
+
+#jt{
+    width: 310px;
+    float: inherit;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
