--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -182,7 +182,35 @@
     float: inherit;
 }
 
+#shoes{
+    width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 50px;
+}
 
+#TS{
+    height:200px;
+}
+#TS span{
+    float: left;
+    padding-top: 20px;
+    color: brown;
+}
+
+#TS p{
+    float: right;
+    padding-top: 30px;
+    font-size: 20px;
+    font-style: unset;
+    color: black;
+}
+
+#trekking{
+    width: 310px;
+    float: inherit;
+}
 
 
 
