--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -212,7 +212,36 @@
     float: inherit;
 }
 
+#Tshirt{
+    width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 50px;
+}
 
+#SHIRT{
+    height:135px;
+}
+
+#SHIRT span{
+    float: left;
+    padding-top: 20px;
+    color: brown;
+}
+
+#SHIRT p{
+    float: right;
+    padding-top: 30px;
+    font-size: 20px;
+    font-style: unset;
+    color: black;
+}
+
+#Tbox{
+    width: 310px;
+    float: inherit;
+}
 
 
 
