--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -47,6 +47,7 @@
 
 .boxed{
     border: 1px solid rgb(97, 76, 7);
+    height: 50%;
 }  
 
 .about p{
@@ -147,12 +148,13 @@
 .wrap{
     padding-left: 1100px;
     font-size: 23px;
-    border-bottom: 0.5px solid;
+    border-bottom: 1px solid;
+    border-width: 2px 1px;
 }
 
 
 #jacket{
-    width: 50%;
+    width: 60%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -183,7 +185,7 @@
 }
 
 #shoes{
-    width: 40%;
+    width: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -213,7 +215,7 @@
 }
 
 #Tshirt{
-    width: 40%;
+    width: 55%;
     display: block;
     margin-left: auto;
     margin-right: auto;
