--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -5,6 +5,15 @@
 
 }
 
+.arrow down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+}
+
 .header li{
     color: #FFFFFF;
     position: absolute;
@@ -17,15 +26,6 @@
     color: #FFFFFF;
     font-size: 60px;
     padding-left: 50px;
-}
-
-.pt{
-    padding-left: 800px;
-    padding-right: 200px;
-}
-
-.hm{
-    padding-right: 200px;
 }
 
 #lg{
@@ -50,6 +50,41 @@
     padding-left: 300px;
   }
 
+.dot {
+    height: 25px;
+    width: 25px;
+    background-color: rgb(56, 66, 61);
+    border-radius: 50%;
+    float: right;  
+    padding-bottom: 20px;   
+}
+
+.dt {
+    height: 25px;
+    width: 25px;
+    background-color: rgb(40, 58, 221);
+    border-radius: 50%;
+    float: right;
+}
+
+.d{
+    height: 25px;
+    width: 25px;
+    background-color: rgb(16, 150, 27);
+    border-radius: 50%;
+    float: right;
+}
+
+.Sz{
+    padding-left: 20px;
+    padding-top: 20px;
+}
+
+#Mn{
+    border-bottom: 1px solid;
+    width: 70%;
+    color: darkgrey;
+}
 
 #panel{
     padding-top: -0;
@@ -94,25 +129,25 @@
 }
 
 #shadow{
-    height: 150px;
+    height: 130px;
 }
 
 #shadow span{
     float: left;
-    padding-top: 90px;
+    padding-top: 50px;
     color: brown;
 }
 
 #shadow p{
     float: right;
-    padding-top: 100px;
+    padding-top: 60px;
     font-size: 20px;
     font-style: unset;
     color: black;
 }
 
 #pants{
-    width: 30%;
+    width: 33%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -125,13 +160,13 @@
 
 #card span{
     float: left;
-    padding-top: 20px;
+    padding-top: 50px;
     color: brown;
 }
 
 #card p{
     float: right;
-    padding-top: 30px;
+    padding-top: 60px;
     font-size: 20px;
     font-style: unset;
     color: black;
@@ -142,7 +177,7 @@
 }
 
 #bag{
-    width: 40%;
+    width: 43%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -155,13 +190,13 @@
 
 #content span{
     float: left;
-    padding-top: 20px;
+    padding-top: 50px;
     color: brown;
 }
 
 #content p{
     float: right;
-    padding-top: 30px;
+    padding-top: 60px;
     font-size: 20px;
     font-style: unset;
     color: black;
@@ -176,11 +211,14 @@
     padding-left: 1100px;
     font-size: 23px;
     border-bottom: 0.5px solid;
+    width: 70%;
+    color: darkgrey;
 }
 
 
+
 #jacket{
-    width: 50%;
+    width: 60%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -211,7 +249,7 @@
 }
 
 #shoes{
-    width: 40%;
+    width: 55%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -223,13 +261,13 @@
 }
 #TS span{
     float: left;
-    padding-top: 20px;
+    padding-top: 80px;
     color: brown;
 }
 
 #TS p{
     float: right;
-    padding-top: 30px;
+    padding-top: 90px;
     font-size: 20px;
     font-style: unset;
     color: black;
@@ -241,7 +279,7 @@
 }
 
 #Tshirt{
-    width: 40%;
+    width: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
