--- a/Assignment_1/css/styles.css
+++ b/Assignment_1/css/styles.css
@@ -5,15 +5,6 @@
 
 }
 
-.arrow down {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-}
-
 .header li{
     color: #FFFFFF;
     position: absolute;
@@ -81,9 +72,10 @@
 }
 
 #Mn{
-    border-bottom: 1px solid;
+    border-bottom: 0.5px solid;
     width: 70%;
     color: darkgrey;
+    font-size: 23px;
 }
 
 #panel{
@@ -110,6 +102,11 @@
 
 .boxed{
     border: 1px solid rgb(97, 76, 7);
+    width: 60%;
+    margin: 0 auto;
+    border: 1px solid rgb(97, 76, 7);  /* outer stroke */
+    outline: 1px solid rgb(97, 76, 7); /* inner stroke */
+    outline-offset: -2px;
 }  
 
 .about p{
@@ -308,30 +305,6 @@
     width: 310px;
     float: inherit;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 #nav{
     height: 100px;
